LiveText-LiveText3.14/src/objects/LiveText_Number__c.object
<CustomObject>
    <description>LiveText Number</description>
    <fields>
        <fullName>Auto_Response_Message__c</fullName>
        <description>This message is sent automatically when an inbound customer text is received during business hours.</description>
        <inlineHelpText>This message is sent automatically when an inbound customer text is received during business hours.</inlineHelpText>
        <label>Auto-Response Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Business support hours for this phone number. Business Hours can be managed via Setup.</inlineHelpText>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>LiveText Numbers</relationshipLabel>
        <relationshipName>LiveText_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chat_End_Message__c</fullName>
        <description>This message is sent automatically to a customer when a text session is ended by an agent.</description>
        <inlineHelpText>This message is sent automatically to a customer when a text session is ended by an agent.</inlineHelpText>
        <label>Chat End Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CreateEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreateEvent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreateTask__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CreateTask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Critical_Alert_Time__c</fullName>
        <description>Seconds after conversation tab with no response from LiveText Agent turn red.</description>
        <inlineHelpText>The number of seconds before the text session tab alerts the agent to respond</inlineHelpText>
        <label>Critical Alert Time (seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formatted_Support_Number__c</fullName>
        <description>Sanitized Support Number</description>
        <formula>International_Live_Text_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Support Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISOCountryCode__c</fullName>
        <defaultValue>&quot;US&quot;</defaultValue>
        <description>ISO 3166-1 alpha-2 country code</description>
        <label>ISO Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITR_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not ITR, and it&apos;s associated workflows, is enabled for this number.</description>
        <inlineHelpText>ITR automates opt-out tracking, routing to agent queues(via Omnichannel),case creation,off-hour handling and other interactions.Review the Admin Guide for more info: 
        http://www.heywire.com
        /resources/(Documentation tab)</inlineHelpText>
        <label>ITR Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Message__c</fullName>
        <description>This message is sent automatically to a customer when a text session is started by an agent.</description>
        <inlineHelpText>This message is sent automatically to a customer when a text session is started by an agent.</inlineHelpText>
        <label>Initial Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>International_Live_Text_Number__c</fullName>
        <description>International Live Text Number</description>
        <label>International Live Text Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Custom_Objects_Tabs__c</fullName>
        <description>Setting for custom objects feature</description>
        <label>New_Custom_Objects_Tabs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Objects_Tabs__c</fullName>
        <description>Contains objects for which new tabs will be opened</description>
        <label>New_Objects_Tabs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Available_Users_Message__c</fullName>
        <inlineHelpText>This message is sent automatically when an inbound customer text is received while no agents are available. (Not for use with Omni-Channel)</inlineHelpText>
        <label>No Available Users Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notify_Users_During_Off_Hours__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, new text sessions received during off hours will populate the user&apos;s (or agent&apos;s) notification queue.</inlineHelpText>
        <label>Notify Users during off hours?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>LiveText Number</description>
        <inlineHelpText>The phone number / shortcode that has been verified and enabled for LiveText. To register additional phone numbers please contact LiveText support at http://support.hwlivetext.com</inlineHelpText>
        <label>Support Number</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Offline_Hours_Message__c</fullName>
        <description>This message is sent automatically when an inbound customer text is received during offline hours.</description>
        <inlineHelpText>This message is sent automatically when an inbound customer text is received during offline hours.</inlineHelpText>
        <label>Offline Hours Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prepend_Country_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether or not to prepend country code for US and Canadian phone numbers that are auto-populated in new Account, Contact, and Lead records.</inlineHelpText>
        <label>Prepend Country Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Screen_Pop_Default_Record_Type__c</fullName>
        <description>Default new record type to pop for inbound conversations with no matching records.</description>
        <label>Screen Pop Default Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_New_Account_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether or not to show the New Account tab when a text session is started for this phone number.</inlineHelpText>
        <label>Show New Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_New_Case_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether or not to show the New Case tab when a text session is started for this phone number.</inlineHelpText>
        <label>Show New Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_New_Contact_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether or not to show the New Contact tab when a text session is started for this phone number.</inlineHelpText>
        <label>Show New Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_New_Lead_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether or not to show the New Lead tab when a text session is started for this phone number.</inlineHelpText>
        <label>Show New Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_New_Opportunity_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether or not to show the New Opportunity tab when a text session is started for this phone number.</inlineHelpText>
        <label>Show New Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_Session_Reuse_Time_seconds__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The time between when a text session is ended and a new text message is received that an existing text session should be reused.</inlineHelpText>
        <label>Text Session Reuse Time (seconds)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A number must be verified by HeyWire Business before it is enabled for LiveText. To register additional phone numbers please contact LiveText support at http://support.hwlivetext.com</inlineHelpText>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <label>LiveText Number</label>
    <nameField>
        <label>Phone Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LiveText Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Chat_End_Message_Length_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Chat_End_Message__c)&gt;160</errorConditionFormula>
        <errorDisplayField>Chat_End_Message__c</errorDisplayField>
        <errorMessage>Chat End Message should not have more than 160 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Initial_Message_Length_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( Initial_Message__c) &gt; 160</errorConditionFormula>
        <errorDisplayField>Initial_Message__c</errorDisplayField>
        <errorMessage>Initial Message should not have more than 160 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Offline_Hours_Message_Length_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( Offline_Hours_Message__c) &gt; 160</errorConditionFormula>
        <errorDisplayField>Offline_Hours_Message__c</errorDisplayField>
        <errorMessage>Offline hours message should not have more than 160 characters.</errorMessage>
    </validationRules>
</CustomObject>